# salic-bot

./: .env.example  .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  run.py  salic-bot.spec
.github/workflows/: release.yml
docs/: DADOS.md
src/salic_bot/: __init__.py  __main__.py  bot.py  config.py  logging_config.py  logging_setup.py  paths.py  settings.py
src/salic_bot/automation/: __init__.py  base_page.py  browser.py
src/salic_bot/automation/pages/: __init__.py  comprovacao_financeira_page.py  comprovantes_page.py  inicio_page.py  login_page.py  project_page.py  projects_page.py  projeto_page.py  projetos_page.py
src/salic_bot/gui/: __init__.py  main_window.py
src/salic_bot/models/: despesa.py  projeto.py
src/salic_bot/utils/: csv_tools.py  drive_manager.py  formatters.py
