[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "salic-bot"
version = "0.1.0"
description = "Bot para automação de prestação de contas no sistema Salic."
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.0",
    "playwright>=1.58.0",
    "PySide6>=6.11.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
salic-bot = "salic_bot.__main__:main"

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | \venv
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
ensure_newline_before_comments = true
use_parentheses = true
skip_glob = [".venv/*", "venv/*"]

[tool.setuptools.packages.find]
where = ["src"]
